# broccolini

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  .pylintrc  CHANGELOG.md  README.md  SECURITY.md  code_of_conduct.md  delete_me_sep_2020.json  githubtoken.py  githubtoken.py~  input_data.csv  log.json  mypy.ini  mypy.ini~  newprecommitexample.txt  pylama.ini  pyproject.toml  pyproject.toml~
.github/workflows/: ci_updated.yml  ci_updated_nov_2020.yml  ci_with_poetry.yml  codeql-analysis.yml  linter.yml  release-drafter.yml
__input_files/: fauna_input_data.csv
broccolini/: api_access.py  authentication_functions.py  aws_operations.py  common.py  database_operations.py  dataclass_for_vars.py  fileoperation_functions.py  json_functions.py  notifications.py  presentation_functions.py  processes.py  todoist_operations.py  todoist_operations.py~
docs/: requirements.txt
templates/: fauna_bulk_upload_preparation.jinja2  new_python_script.jinja2  template_from_conftest.jinja2
tests/: conftest.py  test_api_access.py  test_authentication.py  test_aws_operations.py  test_common.py  test_database_operations.py  test_file_operations.py  test_json_functions.py  test_notifications.py  test_presentation_functions.py  test_processes.py  test_todoist_functions.py
tests/integration_tests/: test_api_return_statistics_for_miners.py  test_api_return_statistics_integrations.py  test_files_to_fauna_integration.py  test_todoist_to_fauna.py
tools/: run-mypy.py
