[tool.poetry]
name = "broccolini"
version = "0.1.12"
description = "broccolini utility functions"
authors = ["Gregory Wendel <greg.wendel@hey.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pythonrising/broccolini/"
repository = "https://github.com/pythonrising/broccolini/"
keywords = ["utilities"]
include = ["LICENSE"]
classifiers=[
   "Environment :: Console",
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License ",
   "Operating System :: OS Independent",
   "Environment :: Console",
   "Intended Audience :: Developers",
   "Natural Language :: English",
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Topic :: Software Development :: Documentation",
   "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.9"
twilio = "^6.45.1"
hvac = "^0.10.5"
faunadb = ">=3,<5"
shortuuid = "^1.0.1"
boto3 = "^1.16.4"
Jinja2 = "^2.11.2"
todoist-python = "^8.1.2"
pydantic = "^1.7.2"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
aiofiles = "^0.6.0"
flake8 = "^3.8.4"
PyGithub = "^1.54"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pre-commit = "^2.7.1"
pylama = "^7.7.1"
pytest-dependency = "^0.5.1"
coverage = "^5.2"
pylint = "^2.5.3"
black = { version = "*", allow-prereleases = true }
bandit = "^1.6.2"
mypy = "^0.790"
pydocstyle = "^5.0.2"
pytest-cov = "^2.10.0"
faker = "^5.3.0"
sphinx = "^3.2.1"
pytest-reportlog = "^0.1.1"
flake8 = "^3.8.4"
mock = "^4.0.2"
pytest-mock = "^3.3.1"
commitizen = "^2.11.0"
flake8-docstrings = "^1.5.0"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | __pycache__
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | build
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
skip_glob = ["*/setup.py", "*/poetry/core/_vendor/*"]
filter_files = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
